tests/test_struct/good/nested3.catala
## [Article]

```catala
new struct S:
  data x content int
  data y content bool

new struct T:
  data a content S
  data b content S

new scope A:
  param t content T

new scope B:
  param t content T
  param a scope A
  param out content int

scope A:
  def t := T {
    -- a : S {
      -- x : 0
      -- y : false
    }
    -- b : S {
      -- x : 1
      -- y : true
    }
  }

scope B:
  def t := a.t
  def out := if t.a.y then t.a.x else (if t.b.y then t.b.x else 42)
```
