tests/test_struct/bad/wrong_qualified_field.catala
## [Article]

```catala
new struct Foo:
  data f content int

new struct Bar:
  data f content int
  data g content int

new scope A:
  param x content Foo
  param y content int

scope A:
  def x := Foo { -- f: 1 }
  def y := x.Foo.g

```
